--- a/pages/sample-pages_tor/4_Stock_Compound_NonCompound.html
+++ b/pages/sample-pages_tor/4_Stock_Compound_NonCompound.html
@@ -276,7 +276,7 @@
                           </div>
                         </div>
                         <div class="row">
-                          <div class="p-2  col-md-12">
+                          <div class="p-2  col-md-3 pull-right">
                             <label for="inputFromDate" class="col-form-label">ค้นหา</label>
                             <input type="text" class="form-control" id="inputFromDate" placeholder="ค้นหา"> </div>
                         </div>
@@ -499,7 +499,7 @@
                           </div>
                         </div>
                         <div class="row">
-                          <div class="p-2  col-md-12">
+                          <div class="p-2  col-md-3 pull-right">
                             <label for="inputFromDate" class="col-form-label">ค้นหา</label>
                             <input type="text" class="form-control" id="inputFromDate" placeholder="ค้นหา"> </div>
                         </div>
@@ -622,7 +622,7 @@
                           </div>
                         </div>
                         <div class="row">
-                          <div class="p-2  col-md-12">
+                          <div class="p-2  col-md-3 pullright">
                             <label for="inputFromDate" class="col-form-label">ค้นหา</label>
                             <input type="text" class="form-control" id="inputFromDate" placeholder="ค้นหา"> </div>
                         </div>
