--- a/pages/sample-pages_tor/15_warehouse.html
+++ b/pages/sample-pages_tor/15_warehouse.html
@@ -152,6 +152,11 @@
                   </div>
                 </div>
                 <div class="row">
+                  <div class="p-2  col-md-3 pull-right">
+                    <label for="inputFromDate" class="col-form-label">ค้นหา</label>
+                    <input type="text" class="form-control" id="inputFromDate" placeholder="ค้นหา"> </div>
+                </div>
+                <div class="row">
                   <div class="col-md-12">
                     <table class="table">
                       <thead>
