--- a/pages/sample-pages_tor/3_mix_order_form.html
+++ b/pages/sample-pages_tor/3_mix_order_form.html
@@ -90,7 +90,7 @@
           <button type="button" class="navbar-toggler navbar-toggler-right" data-toggle="collapse" data-target="#navbarItems" aria-controls="navbarItems" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <a class="navbar-brand" href="#">สั่งผสมยาง</a>
+          <a class="navbar-brand" href="#">ฟอร์มบันทึกสั่งผสมยาง</a>
         </div>
         <div class="collapse navbar-collapse" id="navbarItems">
           <ul class="nav navbar-nav ml-auto">
@@ -137,120 +137,80 @@
         <div class="container-fluid">
           <div class="row">
             <div class="col-md-12">
-              <!--
               <div class="card">
                 <div class="card-body p-2">
--->
-              <form class="form">
-                <div class="row">
-                  <div class="col-md-12">
-                    <div class="card p-2">
-                      <div class="row">
-                        <div class="col-md-9">
-                          <p class="lead">ประวัติการสั่งผสมยาง</p>
-                        </div>
-                        <div class="col-md-3">
-                          <a href="#" class="btn btn-outline-primary pull-right btn-block form-group">สั่งผสมยาง</a>
-                        </div>
+                  <form class="form">
+                    <div class="row">
+                      <div class="col-md-6">
+                        <div class="p-2">
+                          <label>วันที่สั่งยาง</label>
+                          <input type="text" class="form-control" placeholder="วว/ดด/ปปปป"> </div>
                       </div>
-                      <div class="row">
-                        <div class="col-md-12">
-                          <table class="table">
-                            <thead>
-                              <tr>
-                                <th>#</th>
-                                <th>วันที่สั่ง</th>
-                                <th>สูตร</th>
-                                <th>เกรด</th>
-                                <th>น้ำหนัก</th>
-                                <th>การกระทำ</th>
-                              </tr>
-                            </thead>
-                            <tbody>
-                              <tr>
-                                <td>1</td>
-                                <td>2018-12-11</td>
-                                <td>MU 01</td>
-                                <td>M</td>
-                                <td>500</td>
-                                <td>
-                                  <button class="btn btn-info btn-xs">
-                                    <i class="fa fa-list"></i>
-                                  </button>
-                                  <button class="btn btn-warning btn-xs">
-                                    <i class="fa fa-edit"></i>
-                                  </button>
-                                  <button class="btn btn-danger btn-xs">
-                                    <i class="fa fa-trash"></i>
-                                  </button>
-                                </td>
-                              </tr>
-                              <tr>
-                                <td>2</td>
-                                <td>2018-12-10</td>
-                                <td>MU 02</td>
-                                <td>M</td>
-                                <td>500</td>
-                                <td>
-                                  <button class="btn btn-info btn-xs">
-                                    <i class="fa fa-list"></i>
-                                  </button>
-                                  <button class="btn btn-warning btn-xs">
-                                    <i class="fa fa-edit"></i>
-                                  </button>
-                                  <button class="btn btn-danger btn-xs">
-                                    <i class="fa fa-trash"></i>
-                                  </button>
-                                </td>
-                              </tr>
-                              <tr>
-                                <td>3</td>
-                                <td>2018-12-09</td>
-                                <td>MU 03</td>
-                                <td>M</td>
-                                <td>500</td>
-                                <td contenteditable="true">
-                                  <button class="btn btn-info btn-xs">
-                                    <i class="fa fa-list"></i>
-                                  </button>
-                                  <button class="btn btn-warning btn-xs">
-                                    <i class="fa fa-edit"></i>
-                                  </button>
-                                  <button class="btn btn-danger btn-xs">
-                                    <i class="fa fa-trash"></i>
-                                  </button>
-                                </td>
-                              </tr>
-                              <tr>
-                                <td>4</td>
-                                <td>2018-12-08</td>
-                                <td>MU 04</td>
-                                <td>M</td>
-                                <td>500</td>
-                                <td contenteditable="true">
-                                  <button class="btn btn-info btn-xs">
-                                    <i class="fa fa-list"></i>
-                                  </button>
-                                  <button class="btn btn-warning btn-xs">
-                                    <i class="fa fa-edit"></i>
-                                  </button>
-                                  <button class="btn btn-danger btn-xs">
-                                    <i class="fa fa-trash"></i>
-                                  </button>
-                                </td>
-                              </tr>
-                            </tbody>
-                          </table>
+                      <div class="col-md-6">
+                        <div class="p-2">
+                          <div>
+                            <label>เกรด</label>
+                            <select class="form-control">
+                              <option value="ประเภทหนึ่ง">เลือกเกรดยาง</option>
+                            </select>
+                          </div>
                         </div>
                       </div>
                     </div>
-                  </div>
+                    <div class="row">
+                      <div class="col-md-6">
+                        <div>
+                          <div class="p-2">
+                            <div>
+                              <label>สูตรยาง</label>
+                              <select class="form-control">
+                                <option value="ประเภทหนึ่ง">เลือกสูตรยาง</option>
+                              </select>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-md-6">
+                        <div>
+                          <div class="p-2">
+                            <div>
+                              <label>เกรด</label>
+                              <select class="form-control">
+                                <option value="ประเภทหนึ่ง">เลือกเกรดยาง</option>
+                              </select>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-md-12">
+                        <div>
+                          <div class="p-2">
+                            <div class="form-group">
+                              <label>หมายเหตุ</label>
+                              <input type="text" class="form-control"> </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-md-12">
+                        <div>
+                          <div class="p-2">
+                            <div class="row">
+                              <div class="col-md-6"></div>
+                              <div class="col-md-6">
+                                <a href="#" class="btn btn-outline-primary pull-right btn-block">บันทึก</a>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </form>
                 </div>
-              </form>
-              <!--
-                </div>   
               </div>
--->
             </div>
           </div>
         </div>
