--- a/pages/sample-pages_tor/2_bake_save.html
+++ b/pages/sample-pages_tor/2_bake_save.html
@@ -20,8 +20,7 @@
   <link href="../../assets/css/font-muli.css" rel="stylesheet" type="text/css">
   <link href="../../assets/css/custom.css" rel="stylesheet" type="text/css">
   <link href="../../assets/css/themify-icons.css" rel="stylesheet">
-  <link href="mui.css" rel="stylesheet">
-</head>
+  <link href="mui.css" rel="stylesheet"> </head>
 
 <body>
   <div class="wrapper">
@@ -35,51 +34,110 @@
       </div>
       <div class="sidebar-wrapper">
         <ul class="nav flex-column">
-
-                <li class="d-flex flex-column">
-                        <a href="index.html">
-                          <i class="nav-icon"></i>
-                          <p>หน้าเข้าสู่ระบบ</p>
-                        </a>
-                      </li>
-                      <li class="d-flex flex-column">
-                        <a href="2_user_dashboard.html">
-                          <i class="nav-icon"></i>
-                          <p>หน้าหลักผู้ใช้</p>
-                        </a>
-                      </li>
-                      <li class="d-flex flex-column">
-                        <a href="1_sale_twocolumn.html">
-                          <i class="nav-icon"></i>
-                          <p>งานขาย</p>
-                        </a>
-                      </li>
-            
-                      <li class="d-flex flex-column">
-                        <a href="2_bake_search.html">
-                          <i class="nav-icon"></i>
-                          <p>รายการอบสายพาน</p>
-                        </a>
-                      </li>
-                      <li class="d-flex flex-column">
-                        <a href="2_bake_menu.html">
-                          <i class="nav-icon"></i>
-                          <p>งานอบสายพาน(หน้าหลัก)</p>
-                        </a>
-                      </li>
-                      <li class="d-flex flex-column">
-                        <a href="2_bake_setting.html">
-                          <i class="nav-icon"></i>
-                          <p>งานอบสายพาน(ตั้งค่า)</p>
-                        </a>
-                      </li>
-                      <li class="d-flex flex-column active">
-                        <a href="2_bake_save.html">
-                          <i class="nav-icon"></i>
-                          <p>งานอบสายพาน(บันทึกการอบสายพาน)</p>
-                        </a>
-                      </li>          
-
+          <li class="d-flex flex-column">
+            <a href="index.html">
+              <i class="nav-icon"></i>
+              <p>หน้าเข้าสู่ระบบ</p>
+            </a>
+          </li>
+          <li class="d-flex flex-column">
+            <a href="2_user_dashboard.html">
+              <i class="nav-icon"></i>
+              <p>หน้าหลักผู้ใช้</p>
+            </a>
+          </li>
+          <li class="d-flex flex-column">
+            <a href="1_sale_twocolumn.html">
+              <i class="nav-icon"></i>
+              <p>งานขาย</p>
+            </a>
+          </li>
+          <li class="d-flex flex-column">
+            <a href="3_planing.html">
+              <i class="nav-icon"></i>
+              <p>วางแผนผลิต</p>
+            </a>
+          </li>
+          <li class="d-flex flex-column">
+            <a href="8_cut.html">
+              <i class="nav-icon"></i>
+              <p>ตัดผ้า</p>
+            </a>
+          </li>
+          <li class="d-flex flex-column">
+            <a href="9_Glue_Coating.html">
+              <i class="nav-icon"></i>
+              <p>เคลือบน้ำกาว</p>
+            </a>
+          </li>
+          <li class="d-flex flex-column">
+            <a href="10_articulate_v2.html">
+              <i class="nav-icon"></i>
+              <p>ประกบผ้า</p>
+            </a>
+          </li>
+          <li class="d-flex flex-column">
+            <a href="11_calender.html">
+              <i class="nav-icon"></i>
+              <p>เคลือบผิว</p>
+            </a>
+          </li>
+          <li class="d-flex flex-column">
+            <a href="2_bake_search.html">
+              <i class="nav-icon"></i>
+              <p>รายการอบสายพาน</p>
+            </a>
+          </li>
+          <li class="d-flex flex-column">
+            <a href="2_bake_menu.html">
+              <i class="nav-icon"></i>
+              <p>งานอบสายพาน(หน้าหลัก)</p>
+            </a>
+          </li>
+          <li class="d-flex flex-column">
+            <a href="2_bake_setting.html">
+              <i class="nav-icon"></i>
+              <p>งานอบสายพาน(ตั้งค่า)</p>
+            </a>
+          </li>
+          <li class="d-flex flex-column active">
+            <a href="2_bake_save.html">
+              <i class="nav-icon"></i>
+              <p>งานอบสายพาน(บันทึกการอบสายพาน)</p>
+            </a>
+          </li>
+          <li class="d-flex flex-column">
+            <a data-toggle="collapse" href="#tables" class="nav-link collapsed" aria-expanded="false">
+              <p>คลังสินค้า
+                <i class="fa fa-sort-desc submenu-toggle"></i>
+              </p>
+            </a>
+            <div class="collapse" id="tables" role="navigation" aria-expanded="false" style="">
+              <ul class="nav flex-column ps-container ps-theme-default" data-ps-id="2b94cf34-2f02-ad93-3c9a-fec0a52844f9">
+                <li>
+                  <a class="nav-link" href="4_Stock_Compound_NonCompound.html">คลังสินค้า</a>
+                </li>
+                <li>
+                  <a class="nav-link" href="4_In_Out_Compound.html">นำเข้า นำออกยาง Compound</a>
+                </li>
+                <li>
+                  <a class="nav-link" href="4_In_Out_Non_Compound.html">นำเข้า นำออกยาง Non Compound</a>
+                </li>
+                <div class="ps-scrollbar-x-rail" style="left: 0px; bottom: 3px;">
+                  <div class="ps-scrollbar-x" tabindex="0" style="left: 0px; width: 0px;"></div>
+                </div>
+                <div class="ps-scrollbar-y-rail" style="top: 0px; right: 3px;">
+                  <div class="ps-scrollbar-y" tabindex="0" style="top: 0px; height: 0px;"></div>
+                </div>
+                <div class="ps-scrollbar-x-rail" style="left: 0px; bottom: 3px;">
+                  <div class="ps-scrollbar-x" tabindex="0" style="left: 0px; width: 0px;"></div>
+                </div>
+                <div class="ps-scrollbar-y-rail" style="top: 0px; right: 3px;">
+                  <div class="ps-scrollbar-y" tabindex="0" style="top: 0px; height: 0px;"></div>
+                </div>
+              </ul>
+            </div>
+          </li>
         </ul>
       </div>
     </div>
@@ -536,7 +594,9 @@
   <script src="../../assets/vendors/jquery.tagsinput.js"></script>
   <!-- Material Dashboard javascript methods -->
   <script src="../../assets/js/inspire.js"></script>
-
+  <pingendo onclick="window.open('https://pingendo.com/', '_blank')" style="cursor:pointer;position: fixed;bottom: 10px;right:10px;padding:4px;background-color: #00b0eb;border-radius: 8px; width:250px;display:flex;flex-direction:row;align-items:center;justify-content:center;font-size:14px;color:white">Made with Pingendo Free&nbsp;&nbsp;
+    <img src="https://pingendo.com/site-assets/Pingendo_logo_big.png" class="d-block" alt="Pingendo logo" height="16">
+  </pingendo>
 </body>
 
 </html>
