--- a/pages/sample-pages_tor/3_planing.html
+++ b/pages/sample-pages_tor/3_planing.html
@@ -40,7 +40,7 @@
               <p>หน้าเข้าสู่ระบบ</p>
             </a>
           </li>
-          <li class="d-flex flex-column active">
+          <li class="d-flex flex-column">
             <a href="2_user_dashboard.html">
               <i class="nav-icon"></i>
               <p>หน้าหลักผู้ใช้</p>
@@ -50,6 +50,36 @@
             <a href="1_sale_twocolumn.html">
               <i class="nav-icon"></i>
               <p>งานขาย</p>
+            </a>
+          </li>
+          <li class="d-flex flex-column active">
+            <a href="3_planing.html">
+              <i class="nav-icon"></i>
+              <p>วางแผนผลิต</p>
+            </a>
+          </li>
+          <li class="d-flex flex-column">
+            <a href="8_cut.html">
+              <i class="nav-icon"></i>
+              <p>ตัดผ้า</p>
+            </a>
+          </li>
+          <li class="d-flex flex-column">
+            <a href="9_Glue_Coating.html">
+              <i class="nav-icon"></i>
+              <p>เคลือบน้ำกาว</p>
+            </a>
+          </li>
+          <li class="d-flex flex-column">
+            <a href="10_articulate_v2.html">
+              <i class="nav-icon"></i>
+              <p>ประกบผ้า</p>
+            </a>
+          </li>
+          <li class="d-flex flex-column">
+            <a href="11_calender.html">
+              <i class="nav-icon"></i>
+              <p>เคลือบผิว</p>
             </a>
           </li>
           <li class="d-flex flex-column">
@@ -75,6 +105,38 @@
               <i class="nav-icon"></i>
               <p>งานอบสายพาน(บันทึกการอบสายพาน)</p>
             </a>
+          </li>
+          <li class="d-flex flex-column">
+            <a data-toggle="collapse" href="#tables" class="nav-link collapsed" aria-expanded="false">
+              <p>คลังสินค้า
+                <i class="fa fa-sort-desc submenu-toggle"></i>
+              </p>
+            </a>
+            <div class="collapse" id="tables" role="navigation" aria-expanded="false" style="">
+              <ul class="nav flex-column ps-container ps-theme-default" data-ps-id="2b94cf34-2f02-ad93-3c9a-fec0a52844f9">
+                <li>
+                  <a class="nav-link" href="4_Stock_Compound_NonCompound.html">คลังสินค้า</a>
+                </li>
+                <li>
+                  <a class="nav-link" href="4_In_Out_Compound.html">นำเข้า นำออกยาง Compound</a>
+                </li>
+                <li>
+                  <a class="nav-link" href="4_In_Out_Non_Compound.html">นำเข้า นำออกยาง Non Compound</a>
+                </li>
+                <div class="ps-scrollbar-x-rail" style="left: 0px; bottom: 3px;">
+                  <div class="ps-scrollbar-x" tabindex="0" style="left: 0px; width: 0px;"></div>
+                </div>
+                <div class="ps-scrollbar-y-rail" style="top: 0px; right: 3px;">
+                  <div class="ps-scrollbar-y" tabindex="0" style="top: 0px; height: 0px;"></div>
+                </div>
+                <div class="ps-scrollbar-x-rail" style="left: 0px; bottom: 3px;">
+                  <div class="ps-scrollbar-x" tabindex="0" style="left: 0px; width: 0px;"></div>
+                </div>
+                <div class="ps-scrollbar-y-rail" style="top: 0px; right: 3px;">
+                  <div class="ps-scrollbar-y" tabindex="0" style="top: 0px; height: 0px;"></div>
+                </div>
+              </ul>
+            </div>
           </li>
         </ul>
       </div>
@@ -319,7 +381,6 @@
                           <button type="button" class="fc-agendaDay-button fc-button fc-state-default fc-corner-right">day</button>
                         </div>
                       </div>
-                      <div class="fc-clear"></div>
                     </div>
                     <div class="fc-view-container" style="">
                       <div class="fc-view fc-month-view fc-basic-view" style="">
@@ -544,7 +605,6 @@
                                                   <div class="fc-content">
                                                     <span class="fc-title">Inspire Launch</span>
                                                   </div>
-                                                  <div class="fc-resizer fc-end-resizer"></div>
                                                 </a>
                                               </td>
                                               <td class="fc-event-container">
