--- a/pages/sample-pages_tor/10_articulate_v2.html
+++ b/pages/sample-pages_tor/10_articulate_v2.html
@@ -265,7 +265,7 @@
                   </div>
                 </div>
                 <div class="row">
-                  <div class="col-md-6">
+                  <div class="col-md-4">
                     <div class="card">
                       <div class="card-body p-2">
                         <div>
@@ -273,12 +273,51 @@
                           <input type="text" class="form-control"> </div>
                         <div>
                           <label>ผ้าที่ประกบ</label>
-                          <input type="text" class="form-control" placeholder="กว้าง">
-                          <input type="text" class="form-control" placeholder="ยาว"> </div>
+                          <div class="input-group">
+                            <input type="text" class="form-control" aria-label="..." placeholder="กว้าง">
+                            <div class="input-group-btn">
+                              <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">หน่วย
+                                <span class="caret"></span>
+                              </button>
+                              <ul class="dropdown-menu dropdown-menu-right">
+                                <li>
+                                  <a href="#">มม.</a>
+                                </li>
+                                <li>
+                                  <a href="#">ซม.</a>
+                                </li>
+                                <li>
+                                  <a href="#">ม.</a>
+                                </li>
+                              </ul>
+                            </div>
+                            <!-- /btn-group -->
+                          </div>
+                          <div class="input-group">
+                            <input type="text" class="form-control" aria-label="..." placeholder="ยาว">
+                            <div class="input-group-btn">
+                              <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">หน่วย
+                                <span class="caret"></span>
+                              </button>
+                              <ul class="dropdown-menu dropdown-menu-right">
+                                <li>
+                                  <a href="#">มม.</a>
+                                </li>
+                                <li>
+                                  <a href="#">ซม.</a>
+                                </li>
+                                <li>
+                                  <a href="#">ม.</a>
+                                </li>
+                              </ul>
+                            </div>
+                            <!-- /btn-group -->
+                          </div>
+                        </div>
                       </div>
                     </div>
                   </div>
-                  <div class="col-md-6">
+                  <div class="col-md-4">
                     <div class="card">
                       <div class="card-body p-2">
                         <div>
@@ -286,45 +325,190 @@
                           <input type="text" class="form-control"> </div>
                         <div>
                           <label>ผ้าที่ประกบ</label>
-                          <input type="text" class="form-control" placeholder="กว้าง">
-                          <input type="text" class="form-control" placeholder="ยาว"> </div>
+                          <div class="input-group">
+                            <input type="text" class="form-control" aria-label="..." placeholder="กว้าง">
+                            <div class="input-group-btn">
+                              <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">หน่วย
+                                <span class="caret"></span>
+                              </button>
+                              <ul class="dropdown-menu dropdown-menu-right">
+                                <li>
+                                  <a href="#">มม.</a>
+                                </li>
+                                <li>
+                                  <a href="#">ซม.</a>
+                                </li>
+                                <li>
+                                  <a href="#">ม.</a>
+                                </li>
+                              </ul>
+                            </div>
+                            <!-- /btn-group -->
+                          </div>
+                          <div class="input-group">
+                            <input type="text" class="form-control" aria-label="..." placeholder="ยาว">
+                            <div class="input-group-btn">
+                              <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">หน่วย
+                                <span class="caret"></span>
+                              </button>
+                              <ul class="dropdown-menu dropdown-menu-right">
+                                <li>
+                                  <a href="#">มม.</a>
+                                </li>
+                                <li>
+                                  <a href="#">ซม.</a>
+                                </li>
+                                <li>
+                                  <a href="#">ม.</a>
+                                </li>
+                              </ul>
+                            </div>
+                            <!-- /btn-group -->
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="card">
+                      <div class="card-body p-2">
+                        <div>
+                          <label>เลขที่ม้วนผ้า</label>
+                          <input type="text" class="form-control"> </div>
+                        <div>
+                          <label>ผ้าที่ประกบ</label>
+                          <div class="input-group">
+                            <input type="text" class="form-control" aria-label="..." placeholder="กว้าง">
+                            <div class="input-group-btn">
+                              <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">หน่วย
+                                <span class="caret"></span>
+                              </button>
+                              <ul class="dropdown-menu dropdown-menu-right">
+                                <li>
+                                  <a href="#">มม.</a>
+                                </li>
+                                <li>
+                                  <a href="#">ซม.</a>
+                                </li>
+                                <li>
+                                  <a href="#">ม.</a>
+                                </li>
+                              </ul>
+                            </div>
+                            <!-- /btn-group -->
+                          </div>
+                          <div class="input-group">
+                            <input type="text" class="form-control" aria-label="..." placeholder="ยาว">
+                            <div class="input-group-btn">
+                              <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">หน่วย
+                                <span class="caret"></span>
+                              </button>
+                              <ul class="dropdown-menu dropdown-menu-right">
+                                <li>
+                                  <a href="#">มม.</a>
+                                </li>
+                                <li>
+                                  <a href="#">ซม.</a>
+                                </li>
+                                <li>
+                                  <a href="#">ม.</a>
+                                </li>
+                              </ul>
+                            </div>
+                            <!-- /btn-group -->
+                          </div>
+                        </div>
                       </div>
                     </div>
                   </div>
                 </div>
                 <div class="row">
-                  <div class="col-md-6">
-                    <div class="card">
-                      <div class="card-body p-2">
-                        <div>
-                          <label>เลขที่ม้วนผ้า</label>
-                          <input type="text" class="form-control"> </div>
-                        <div>
-                          <label>ผ้าที่ประกบ</label>
-                          <input type="text" class="form-control" placeholder="กว้าง">
-                          <input type="text" class="form-control" placeholder="ยาว"> </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-6">
+                  <div class="col-md-12">
                     <div class="row">
-                      <div class="col-md-12">
+                      <div class="col-md-4">
                         <div class="card">
                           <div class="card-body p-2">
                             <div>
                               <label>ความยาวจริง</label>
-                              <input type="text" class="form-control" placeholder="เมตร"> </div>
+                              <div class="input-group">
+                                <input type="text" class="form-control" aria-label="...">
+                                <div class="input-group-btn">
+                                  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">หน่วย
+                                    <span class="caret"></span>
+                                  </button>
+                                  <ul class="dropdown-menu dropdown-menu-right">
+                                    <li>
+                                      <a href="#">มม.</a>
+                                    </li>
+                                    <li>
+                                      <a href="#">ซม.</a>
+                                    </li>
+                                    <li>
+                                      <a href="#">ม.</a>
+                                    </li>
+                                  </ul>
+                                </div>
+                                <!-- /btn-group -->
+                              </div>
+                            </div>
                           </div>
                         </div>
                       </div>
-                    </div>
-                    <div class="row">
-                      <div class="col-md-12">
+                      <div class="col-md-4">
                         <div class="card">
                           <div class="card-body p-2">
                             <div>
                               <label>ความยาวเผื่อ</label>
-                              <input type="text" class="form-control" placeholder="เมตร"> </div>
+                              <div class="input-group">
+                                <input type="text" class="form-control" aria-label="...">
+                                <div class="input-group-btn">
+                                  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">หน่วย
+                                    <span class="caret"></span>
+                                  </button>
+                                  <ul class="dropdown-menu dropdown-menu-right">
+                                    <li>
+                                      <a href="#">มม.</a>
+                                    </li>
+                                    <li>
+                                      <a href="#">ซม.</a>
+                                    </li>
+                                    <li>
+                                      <a href="#">ม.</a>
+                                    </li>
+                                  </ul>
+                                </div>
+                                <!-- /btn-group -->
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-md-4">
+                        <div class="card">
+                          <div class="card-body p-2">
+                            <div>
+                              <label>ความยาวรวม</label>
+                              <div class="input-group">
+                                <input type="text" class="form-control" aria-label="...">
+                                <div class="input-group-btn">
+                                  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">หน่วย
+                                    <span class="caret"></span>
+                                  </button>
+                                  <ul class="dropdown-menu dropdown-menu-right">
+                                    <li>
+                                      <a href="#">มม.</a>
+                                    </li>
+                                    <li>
+                                      <a href="#">ซม.</a>
+                                    </li>
+                                    <li>
+                                      <a href="#">ม.</a>
+                                    </li>
+                                  </ul>
+                                </div>
+                                <!-- /btn-group -->
+                              </div>
+                            </div>
                           </div>
                         </div>
                       </div>
@@ -332,16 +516,36 @@
                   </div>
                 </div>
                 <div class="row">
-                  <div class="col-md-6">
+                  <div class="col-md-4">
                     <div class="card">
                       <div class="card-body p-2">
                         <div>
                           <label>ของเสีย</label>
-                          <input type="text" class="form-control"> </div>
+                          <div class="input-group">
+                            <input type="text" class="form-control" aria-label="..." placeholder="น้ำหนัก">
+                            <div class="input-group-btn">
+                              <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">หน่วย
+                                <span class="caret"></span>
+                              </button>
+                              <ul class="dropdown-menu dropdown-menu-right">
+                                <li>
+                                  <a href="#">มม.</a>
+                                </li>
+                                <li>
+                                  <a href="#">ซม.</a>
+                                </li>
+                                <li>
+                                  <a href="#">ม.</a>
+                                </li>
+                              </ul>
+                            </div>
+                            <!-- /btn-group -->
+                          </div>
+                        </div>
                       </div>
                     </div>
                   </div>
-                  <div class="col-md-6">
+                  <div class="col-md-4">
                     <div class="card">
                       <div class="card-body p-2">
                         <div>
@@ -350,23 +554,12 @@
                       </div>
                     </div>
                   </div>
-                </div>
-                <div class="row">
-                  <div class="col-md-6">
+                  <div class="col-md-4">
                     <div class="card">
                       <div class="card-body p-2">
                         <div>
                           <label>เวลาเสร็จ</label>
                           <input type="time" class="form-control" id="firstName" required="" value=""> </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-6">
-                    <div class="card">
-                      <div class="card-body p-2">
-                        <div>
-                          <label>ความยาวรวม</label>
-                          <input type="text" class="form-control" placeholder="นิ้ว.เมตร"> </div>
                       </div>
                     </div>
                   </div>
