--- a/pages/sample-pages_tor/11_calender.html
+++ b/pages/sample-pages_tor/11_calender.html
@@ -265,36 +265,93 @@
                   </div>
                 </div>
                 <div class="row">
-                  <div class="col-md-6">
+                  <div class="col-md-4">
                     <div class="card">
                       <div class="card-body p-2">
                         <div>
                           <label>หนาบน</label>
-                          <input type="text" class="form-control" id="lastName" value="" required=""> </div>
+                          <div class="input-group">
+                            <input type="text" class="form-control" aria-label="...">
+                            <div class="input-group-btn">
+                              <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">หน่วย
+                                <span class="caret"></span>
+                              </button>
+                              <ul class="dropdown-menu dropdown-menu-right">
+                                <li>
+                                  <a href="#">มม.</a>
+                                </li>
+                                <li>
+                                  <a href="#">ซม.</a>
+                                </li>
+                                <li>
+                                  <a href="#">ม.</a>
+                                </li>
+                              </ul>
+                            </div>
+                            <!-- /btn-group -->
+                          </div>
+                        </div>
                       </div>
                     </div>
                   </div>
-                  <div class="col-md-6">
+                  <div class="col-md-4">
                     <div class="card">
                       <div class="card-body p-2">
                         <div>
                           <label>หนาล่าง</label>
-                          <input type="text" class="form-control" id="lastName" required="" value=""> </div>
+                          <div class="input-group">
+                            <input type="text" class="form-control" aria-label="...">
+                            <div class="input-group-btn">
+                              <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">หน่วย
+                                <span class="caret"></span>
+                              </button>
+                              <ul class="dropdown-menu dropdown-menu-right">
+                                <li>
+                                  <a href="#">มม.</a>
+                                </li>
+                                <li>
+                                  <a href="#">ซม.</a>
+                                </li>
+                                <li>
+                                  <a href="#">ม.</a>
+                                </li>
+                              </ul>
+                            </div>
+                            <!-- /btn-group -->
+                          </div>
+                        </div>
                       </div>
                     </div>
                   </div>
-                </div>
-                <div class="row">
-                  <div class="col-md-6">
+                  <div class="col-md-4">
                     <div class="card">
                       <div class="card-body p-2">
                         <div>
                           <label>หนารวม</label>
-                          <input type="text" class="form-control" id="lastName" required="" value=""> </div>
+                          <div class="input-group">
+                            <input type="text" class="form-control" aria-label="...">
+                            <div class="input-group-btn">
+                              <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">หน่วย
+                                <span class="caret"></span>
+                              </button>
+                              <ul class="dropdown-menu dropdown-menu-right">
+                                <li>
+                                  <a href="#">มม.</a>
+                                </li>
+                                <li>
+                                  <a href="#">ซม.</a>
+                                </li>
+                                <li>
+                                  <a href="#">ม.</a>
+                                </li>
+                              </ul>
+                            </div>
+                            <!-- /btn-group -->
+                          </div>
+                        </div>
                       </div>
                     </div>
                   </div>
-                  <div class="col-md-6"> </div>
                 </div>
                 <div class="row">
                   <div class="col-md-6">
@@ -362,7 +419,24 @@
                       <div class="card-body p-2">
                         <div>
                           <label>รอบความเร็ว</label>
-                          <input type="text" class="form-control" id="lastName" required="" value="" placeholder="เมตร/นาที"> </div>
+                          <div class="input-group">
+                            <input type="text" class="form-control" aria-label="...">
+                            <div class="input-group-btn">
+                              <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">หน่วย
+                                <span class="caret"></span>
+                              </button>
+                              <ul class="dropdown-menu dropdown-menu-right">
+                                <li>
+                                  <a href="#">ซม./นาที</a>
+                                </li>
+                                <li>
+                                  <a href="#">เมตร./นาที</a>
+                                </li>
+                              </ul>
+                            </div>
+                            <!-- /btn-group -->
+                          </div>
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -371,7 +445,27 @@
                       <div class="card-body p-2">
                         <div>
                           <label>ความยาวที่เคลือบได้</label>
-                          <input type="text" class="form-control" id="lastName" required="" value=""> </div>
+                          <div class="input-group">
+                            <input type="text" class="form-control" aria-label="...">
+                            <div class="input-group-btn">
+                              <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">หน่วย
+                                <span class="caret"></span>
+                              </button>
+                              <ul class="dropdown-menu dropdown-menu-right">
+                                <li>
+                                  <a href="#">มม.</a>
+                                </li>
+                                <li>
+                                  <a href="#">ซม.</a>
+                                </li>
+                                <li>
+                                  <a href="#">ม.</a>
+                                </li>
+                              </ul>
+                            </div>
+                            <!-- /btn-group -->
+                          </div>
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -390,9 +484,7 @@
                 <div class="card">
                   <div class="card-body p-2">
                     <div class="row">
-                      <div class="col-md-6">
-                        <a href="#" class="btn btn-outline-primary pull-right btn-block">บันทึกเสร็จงาน</a>
-                      </div>
+                      <div class="col-md-6"></div>
                       <div class="col-md-6">
                         <a href="#" class="btn btn-outline-primary pull-right btn-block">บันทึก</a>
                       </div>
