--- a/pages/sample-pages_tor/3_planing.html
+++ b/pages/sample-pages_tor/3_planing.html
@@ -201,16 +201,15 @@
             <div class="col-md-12">
               <div class="card p-2">
                 <div class="row">
-                  <div class="col-md-6">
+                  <div class="col-md-9">
                     <p class="lead">ตารางสรุปยอดออเดอร์ประจำวัน</p>
-                    <div class="p-2  col-md-12">
-                      <label for="inputFromDate" class="col-form-label">ค้นหา</label>
-                      <input type="text" class="form-control" id="inputFromDate" placeholder="ค้นหา"> </div>
                   </div>
-                  <div class="col-md-6 text-right"> </div>
+                  <div class="p-2 col-md-3">
+                    <label for="inputFromDate" class="col-form-label">ค้นหา</label>
+                    <input type="text" class="form-control" id="inputFromDate" placeholder="ค้นหา"> </div>
                 </div>
                 <div class="row">
-                  <div class="col-md-12">
+                  <div class="col-md-12 p-2">
                     <table class="table">
                       <thead>
                         <tr>
@@ -327,28 +326,6 @@
                         </tr>
                       </tbody>
                     </table>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-12">
-              <div class="card">
-                <div class="row">
-                  <div class="col-md-12 text-right"> </div>
-                </div>
-                <div class="row">
-                  <div class="col-md-12">
-                    <div class="col-md-6">
-                      <label for="inputFromDate" class="col-form-label">ช่วงวันที่ผลิต</label>
-                      <input type="text" class="form-control" id="inputFromDate" placeholder="วันที่"> </div>
-                    <div class="col-md-6 form-group">
-                      <label for="inputFromDate" class="col-form-label p-2">ส่งต่อออเดอร์ให้แผนกอื่น</label>
-                      <select class="form-control">
-                        <option value="1">คลัง</option>
-                      </select>
-                    </div>
                   </div>
                 </div>
               </div>
