Fix all tab menu & add in out stock compound non compound

--- a/pages/sample-pages_tor/3_planing.html
+++ b/pages/sample-pages_tor/3_planing.html
@@ -106,7 +106,7 @@
               <p>งานอบสายพาน(บันทึกการอบสายพาน)</p>
             </a>
           </li>
-          <li class="d-flex flex-column">
+          <li class="d-flex flex-column active">
             <a data-toggle="collapse" href="#tables" class="nav-link collapsed" aria-expanded="false">
               <p>คลังสินค้า
                 <i class="fa fa-sort-desc submenu-toggle"></i>
@@ -118,10 +118,22 @@
                   <a class="nav-link" href="4_Stock_Compound_NonCompound.html">คลังสินค้า</a>
                 </li>
                 <li>
-                  <a class="nav-link" href="4_In_Out_Compound.html">นำเข้า นำออกยาง Compound</a>
+                  <a class="nav-link" href="4_In_Stock.html">นำเข้าคลังสินค้า</a>
                 </li>
                 <li>
-                  <a class="nav-link" href="4_In_Out_Non_Compound.html">นำเข้า นำออกยาง Non Compound</a>
+                  <a class="nav-link" href="4_Out_Stock.html">นำออกคลังสินค้า</a>
+                </li>
+                <li>
+                  <a class="nav-link" href="4_In_Compound.html">นำเข้า Compound</a>
+                </li>
+                <li>
+                  <a class="nav-link" href="4_Out_Compound.html">นำออก Compound</a>
+                </li>
+                <li>
+                  <a class="nav-link" href="4_In_NonCompound.html">นำเข้า Non Compound</a>
+                </li>
+                <li>
+                  <a class="nav-link" href="4_Out_NonCompound.html">นำออก Non Compound</a>
                 </li>
                 <div class="ps-scrollbar-x-rail" style="left: 0px; bottom: 3px;">
                   <div class="ps-scrollbar-x" tabindex="0" style="left: 0px; width: 0px;"></div>
