--- a/pages/sample-pages_tor/2_bake_setting.html
+++ b/pages/sample-pages_tor/2_bake_setting.html
@@ -116,10 +116,22 @@
                   <a class="nav-link" href="4_Stock_Compound_NonCompound.html">คลังสินค้า</a>
                 </li>
                 <li>
-                  <a class="nav-link" href="4_In_Out_Compound.html">นำเข้า นำออกยาง Compound</a>
+                  <a class="nav-link" href="4_In_Stock.html">นำเข้าคลังสินค้า</a>
                 </li>
                 <li>
-                  <a class="nav-link" href="4_In_Out_Non_Compound.html">นำเข้า นำออกยาง Non Compound</a>
+                  <a class="nav-link" href="4_Out_Stock.html">นำออกคลังสินค้า</a>
+                </li>
+                <li>
+                  <a class="nav-link" href="4_In_Compound.html">นำเข้า Compound</a>
+                </li>
+                <li>
+                  <a class="nav-link" href="4_Out_Compound.html">นำออก Compound</a>
+                </li>
+                <li>
+                  <a class="nav-link" href="4_In_NonCompound.html">นำเข้า Non Compound</a>
+                </li>
+                <li>
+                  <a class="nav-link" href="4_Out_NonCompound.html">นำออก Non Compound</a>
                 </li>
                 <div class="ps-scrollbar-x-rail" style="left: 0px; bottom: 3px;">
                   <div class="ps-scrollbar-x" tabindex="0" style="left: 0px; width: 0px;"></div>
