--- a/pages/sample-pages_tor/4_In_Compound.html
+++ b/pages/sample-pages_tor/4_In_Compound.html
@@ -76,7 +76,7 @@
               <p>ประกบผ้า</p>
             </a>
           </li>
-          <li class="d-flex flex-column active">
+          <li class="d-flex flex-column">
             <a href="11_calender.html">
               <i class="nav-icon"></i>
               <p>เคลือบผิว</p>
@@ -106,7 +106,7 @@
               <p>งานอบสายพาน(บันทึกการอบสายพาน)</p>
             </a>
           </li>
-          <li class="d-flex flex-column">
+          <li class="d-flex flex-column active">
             <a data-toggle="collapse" href="#tables" class="nav-link collapsed" aria-expanded="false">
               <p>คลังสินค้า
                 <i class="fa fa-sort-desc submenu-toggle"></i>
@@ -123,7 +123,7 @@
                 <li>
                   <a class="nav-link" href="4_Out_Stock.html">นำออกคลังสินค้า</a>
                 </li>
-                <li>
+                <li class="active">
                   <a class="nav-link" href="4_In_Compound.html">นำเข้า Compound</a>
                 </li>
                 <li>
@@ -154,7 +154,7 @@
       </div>
     </div>
     <div class="main-panel">
-      <nav class="navbar navbar-default navbar-toggleable-md navbar-inverse">
+      <nav class="navbar navbar-default navbar-toggleable-md navbar-inverse" style="opacity: 0.5;">
         <div class="navbar-minimize">
           <button id="minimizeSidebar" class="btn btn-round btn-white btn-fill btn-just-icon">
             <i class="ti-arrow-left"></i>
@@ -164,7 +164,7 @@
           <button type="button" class="navbar-toggler navbar-toggler-right" data-toggle="collapse" data-target="#navbarItems" aria-controls="navbarItems" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <a class="navbar-brand" href="#">เคลือบผิว</a>
+          <a class="navbar-brand" href="#">การนำเข้ายาง Compound</a>
         </div>
         <div class="collapse navbar-collapse" id="navbarItems">
           <ul class="nav navbar-nav ml-auto">
@@ -276,89 +276,58 @@
                     </div>
                   </div>
                 </div>
-                <div class="row">
-                  <div class="col-md-4">
-                    <div class="card">
-                      <div class="card-body p-2">
-                        <div>
-                          <label>หนาบน</label>
-                          <div class="input-group">
-                            <input type="text" class="form-control" aria-label="...">
-                            <div class="input-group-btn">
-                              <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">หน่วย
-                                <span class="caret"></span>
-                              </button>
-                              <ul class="dropdown-menu dropdown-menu-right">
-                                <li>
-                                  <a href="#">มม.</a>
-                                </li>
-                                <li>
-                                  <a href="#">ซม.</a>
-                                </li>
-                                <li>
-                                  <a href="#">ม.</a>
-                                </li>
-                              </ul>
-                            </div>
-                            <!-- /btn-group -->
+                <div class="card p-2">
+                  <div class="row">
+                    <div class="col-md-12">
+                      <h5>การนำเข้า Compound
+                        <br> </h5>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-6">
+                      <div class="p-2 ">
+                        <label for="inputGrade" class="col-form-label">สูตรยาง</label>
+                        <div class="dropdown">
+                          <select id="country" required="" class="form-control">
+                            <option value="">เลือกสูตรยาง</option>
+                          </select>
+                          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <a class="dropdown-item" href="#">P</a>
+                            <a class="dropdown-item" href="#">N</a>
+                            <a class="dropdown-item" href="#">M</a>
+                            <a class="dropdown-item" href="#">OR-1</a>
+                            <a class="dropdown-item" href="#">OR-2</a>
+                            <a class="dropdown-item" href="#">HR-100</a>
+                            <a class="dropdown-item" href="#">HR-120</a>
+                            <a class="dropdown-item" href="#">HR-150</a>
+                            <a class="dropdown-item" href="#">ทดกรด/ต่าง</a>
+                            <a class="dropdown-item" href="#">ยิงทราย</a>
                           </div>
                         </div>
                       </div>
+                      <div class="p-2 ">
+                        <label for="inputBeltWidth" class="col-form-label">Batch No.</label>
+                        <input type="text" class="form-control" id="inputBeltWidth" placeholder="ระบุเลขที่"> </div>
                     </div>
-                  </div>
-                  <div class="col-md-4">
-                    <div class="card">
-                      <div class="card-body p-2">
-                        <div>
-                          <label>หนาล่าง</label>
-                          <div class="input-group">
-                            <input type="text" class="form-control" aria-label="...">
-                            <div class="input-group-btn">
-                              <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">หน่วย
-                                <span class="caret"></span>
-                              </button>
-                              <ul class="dropdown-menu dropdown-menu-right">
-                                <li>
-                                  <a href="#">มม.</a>
-                                </li>
-                                <li>
-                                  <a href="#">ซม.</a>
-                                </li>
-                                <li>
-                                  <a href="#">ม.</a>
-                                </li>
-                              </ul>
-                            </div>
-                            <!-- /btn-group -->
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-4">
-                    <div class="card">
-                      <div class="card-body p-2">
-                        <div>
-                          <label>หนารวม</label>
-                          <div class="input-group">
-                            <input type="text" class="form-control" aria-label="...">
-                            <div class="input-group-btn">
-                              <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">หน่วย
-                                <span class="caret"></span>
-                              </button>
-                              <ul class="dropdown-menu dropdown-menu-right">
-                                <li>
-                                  <a href="#">มม.</a>
-                                </li>
-                                <li>
-                                  <a href="#">ซม.</a>
-                                </li>
-                                <li>
-                                  <a href="#">ม.</a>
-                                </li>
-                              </ul>
-                            </div>
-                            <!-- /btn-group -->
+                    <div class="col-md-6">
+                      <div class="p-2 ">
+                        <label for="inputBeltWidth" class="col-form-label">น้ำหนัก</label>
+                        <input type="text" class="form-control" id="inputBeltWidth" placeholder="ระบุน้ำหนัก"> </div>
+                      <div class="p-2 ">
+                        <label for="inputGrade" class="col-form-label">&nbsp;</label>
+                        <div class="dropdown">
+                          <a href="#" class="btn btn-outline-primary pull-right btn-block">บันทึก</a>
+                          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <a class="dropdown-item" href="#">P</a>
+                            <a class="dropdown-item" href="#">N</a>
+                            <a class="dropdown-item" href="#">M</a>
+                            <a class="dropdown-item" href="#">OR-1</a>
+                            <a class="dropdown-item" href="#">OR-2</a>
+                            <a class="dropdown-item" href="#">HR-100</a>
+                            <a class="dropdown-item" href="#">HR-120</a>
+                            <a class="dropdown-item" href="#">HR-150</a>
+                            <a class="dropdown-item" href="#">ทดกรด/ต่าง</a>
+                            <a class="dropdown-item" href="#">ยิงทราย</a>
                           </div>
                         </div>
                       </div>
@@ -366,163 +335,31 @@
                   </div>
                 </div>
                 <div class="row">
-                  <div class="col-md-6">
-                    <div class="card">
-                      <div class="card-body p-2">
-                        <div>
-                          <label>อุณหภูมิลูกลิ้งที่ 1</label>
-                          <input type="text" class="form-control" id="lastName" value="" required=""> </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-6">
-                    <div class="card">
-                      <div class="card-body p-2">
-                        <div>
-                          <label>อุณหภูมิลูกลิ้งที่ 2</label>
-                          <input type="text" class="form-control" id="lastName" value="" required=""> </div>
-                      </div>
-                    </div>
-                  </div>
+                  <div class="col-md-12"> </div>
                 </div>
                 <div class="row">
-                  <div class="col-md-6">
-                    <div class="card">
-                      <div class="card-body p-2">
-                        <div>
-                          <label>อุณหภูมิลูกลิ้งที่ 3</label>
-                          <input type="text" class="form-control" id="lastName" required="" value=""> </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-6">
-                    <div class="card">
-                      <div class="card-body p-2">
-                        <div>
-                          <label>อุณหภูมิลูกลิ้งที่ 4</label>
-                          <input type="text" class="form-control" id="lastName" required="" value=""> </div>
-                      </div>
-                    </div>
-                  </div>
+                  <div class="col-md-12"> </div>
                 </div>
-                <div class="row">
-                  <div class="col-md-6">
-                    <div class="card">
-                      <div class="card-body p-2">
-                        <div>
-                          <label>เวลาเข้า</label>
-                          <input type="time" class="form-control" id="firstName" value="" required=""> </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-6">
-                    <div class="card">
-                      <div class="card-body p-2">
-                        <div>
-                          <label>เวลาออก</label>
-                          <input type="time" class="form-control" id="firstName" required="" value=""> </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col-md-6">
-                    <div class="card">
-                      <div class="card-body p-2">
-                        <div>
-                          <label>รอบความเร็ว</label>
-                          <div class="input-group">
-                            <input type="text" class="form-control" aria-label="...">
-                            <div class="input-group-btn">
-                              <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">หน่วย
-                                <span class="caret"></span>
-                              </button>
-                              <ul class="dropdown-menu dropdown-menu-right">
-                                <li>
-                                  <a href="#">ซม./นาที</a>
-                                </li>
-                                <li>
-                                  <a href="#">เมตร./นาที</a>
-                                </li>
-                              </ul>
-                            </div>
-                            <!-- /btn-group -->
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-6">
-                    <div class="card">
-                      <div class="card-body p-2">
-                        <div>
-                          <label>ความยาวที่เคลือบได้</label>
-                          <div class="input-group">
-                            <input type="text" class="form-control" aria-label="...">
-                            <div class="input-group-btn">
-                              <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">หน่วย
-                                <span class="caret"></span>
-                              </button>
-                              <ul class="dropdown-menu dropdown-menu-right">
-                                <li>
-                                  <a href="#">มม.</a>
-                                </li>
-                                <li>
-                                  <a href="#">ซม.</a>
-                                </li>
-                                <li>
-                                  <a href="#">ม.</a>
-                                </li>
-                              </ul>
-                            </div>
-                            <!-- /btn-group -->
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col-md-12">
-                    <div class="card">
-                      <div class="card-body p-2">
-                        <div>
-                          <label>หมายเหตุ</label>
-                          <input type="text" class="form-control" id="lastName" required="" value=""> </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="card">
-                  <div class="card-body p-2">
-                    <div class="row">
-                      <div class="col-md-6"></div>
-                      <div class="col-md-6">
-                        <a href="#" class="btn btn-outline-primary pull-right btn-block">บันทึก</a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </form>
-            </div>
-            <!--
+                <!--
                 </div>   
               </div>
 -->
+              </form>
+            </div>
           </div>
         </div>
       </div>
+      <footer class="footer">
+        <div class="container">
+          <p class="copyright float-right"> ©
+            <script>
+              document.write(new Date().getFullYear())
+            </script>
+            <a href="#">Workbythai Internet And Marketing Co., Ltd.</a>
+          </p>
+        </div>
+      </footer>
     </div>
-    <footer class="footer">
-      <div class="container">
-        <p class="copyright float-right"> ©
-          <script>
-            document.write(new Date().getFullYear())
-          </script>
-          <a href="#">Workbythai Internet And Marketing Co., Ltd.</a>
-        </p>
-      </div>
-    </footer>
   </div>
   <!--   Core JS Files   -->
   <script src="../../assets/vendors/jquery-3.1.1.min.js" type="text/javascript"></script>
