--- a/pages/sample-pages_tor/4_Out_NonCompound.html
+++ b/pages/sample-pages_tor/4_Out_NonCompound.html
@@ -117,11 +117,23 @@
                 <li>
                   <a class="nav-link" href="4_Stock_Compound_NonCompound.html">คลังสินค้า</a>
                 </li>
-                <li class="active">
-                  <a class="nav-link" href="4_In_Out_Compound.html">นำเข้า นำออกยาง Compound</a>
+                <li>
+                  <a class="nav-link" href="4_In_Stock.html">นำเข้าคลังสินค้า</a>
                 </li>
                 <li>
-                  <a class="nav-link" href="4_In_Out_Non_Compound.html">นำเข้า นำออกยาง Non Compound</a>
+                  <a class="nav-link" href="4_Out_Stock.html">นำออกคลังสินค้า</a>
+                </li>
+                <li>
+                  <a class="nav-link" href="4_In_Compound.html">นำเข้า Compound</a>
+                </li>
+                <li>
+                  <a class="nav-link" href="4_Out_Compound.html">นำออก Compound</a>
+                </li>
+                <li>
+                  <a class="nav-link" href="4_In_NonCompound.html">นำเข้า Non Compound</a>
+                </li>
+                <li class="active">
+                  <a class="nav-link" href="4_Out_NonCompound.html">นำออก Non Compound</a>
                 </li>
                 <div class="ps-scrollbar-x-rail" style="left: 0px; bottom: 3px;">
                   <div class="ps-scrollbar-x" tabindex="0" style="left: 0px; width: 0px;"></div>
@@ -152,7 +164,7 @@
           <button type="button" class="navbar-toggler navbar-toggler-right" data-toggle="collapse" data-target="#navbarItems" aria-controls="navbarItems" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <a class="navbar-brand" href="#">การนำเข้า นำออกยาง Compound</a>
+          <a class="navbar-brand" href="#">การนำออกยาง Non Compound</a>
         </div>
         <div class="collapse navbar-collapse" id="navbarItems">
           <ul class="nav navbar-nav ml-auto">
@@ -204,63 +216,60 @@
                 <div class="card-body p-2">
 -->
               <form class="form">
-                <div class="card p-2">
-                  <div class="row">
-                    <div class="col-md-6">
-                      <h5>การนำเข้ายาง Compound
-                        <br> </h5>
-                    </div>
-                    <div class="col-md-6 text-right">
-                      <div class="p-2 form-group">
-                        <a href="#" class="btn btn-outline-primary btn-block btn-lg"> แสกนบาร์โค้ดนำเข้า</a>
+                <div class="row">
+                  <div class="col-md-6">
+                    <div class="card">
+                      <div class="card-body p-2">
+                        <div>
+                          <label>เลขที่ใบแจ้งผลิต:</label>
+                          <span>M2018120100001</span>
+                        </div>
                       </div>
                     </div>
                   </div>
-                  <div class="row">
-                    <div class="col-md-6">
-                      <div class="p-2 ">
-                        <label for="inputGrade" class="col-form-label">สูตรยาง</label>
-                        <div class="dropdown">
-                          <select id="country" required="" class="form-control">
-                            <option value="">เลือกสูตรยาง</option>
-                          </select>
-                          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <a class="dropdown-item" href="#">P</a>
-                            <a class="dropdown-item" href="#">N</a>
-                            <a class="dropdown-item" href="#">M</a>
-                            <a class="dropdown-item" href="#">OR-1</a>
-                            <a class="dropdown-item" href="#">OR-2</a>
-                            <a class="dropdown-item" href="#">HR-100</a>
-                            <a class="dropdown-item" href="#">HR-120</a>
-                            <a class="dropdown-item" href="#">HR-150</a>
-                            <a class="dropdown-item" href="#">ทดกรด/ต่าง</a>
-                            <a class="dropdown-item" href="#">ยิงทราย</a>
-                          </div>
+                  <div class="col-md-3">
+                    <div class="card">
+                      <div class="card-body p-2">
+                        <div>
+                          <label>วันที่สั่งซื้อ: &nbsp;</label>
+                          <span>1/12/2561</span>
                         </div>
                       </div>
-                      <div class="p-2 ">
-                        <label for="inputBeltWidth" class="col-form-label">Batch No.</label>
-                        <input type="text" class="form-control" id="inputBeltWidth" placeholder="ระบุเลขที่"> </div>
                     </div>
-                    <div class="col-md-6">
-                      <div class="p-2 ">
-                        <label for="inputBeltWidth" class="col-form-label">น้ำหนัก</label>
-                        <input type="text" class="form-control" id="inputBeltWidth" placeholder="ระบุน้ำหนัก"> </div>
-                      <div class="p-2 ">
-                        <label for="inputGrade" class="col-form-label">&nbsp;</label>
-                        <div class="dropdown">
-                          <a href="#" class="btn btn-outline-primary pull-right btn-block">บันทึก</a>
-                          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <a class="dropdown-item" href="#">P</a>
-                            <a class="dropdown-item" href="#">N</a>
-                            <a class="dropdown-item" href="#">M</a>
-                            <a class="dropdown-item" href="#">OR-1</a>
-                            <a class="dropdown-item" href="#">OR-2</a>
-                            <a class="dropdown-item" href="#">HR-100</a>
-                            <a class="dropdown-item" href="#">HR-120</a>
-                            <a class="dropdown-item" href="#">HR-150</a>
-                            <a class="dropdown-item" href="#">ทดกรด/ต่าง</a>
-                            <a class="dropdown-item" href="#">ยิงทราย</a>
+                  </div>
+                  <div class="col-md-3">
+                    <div class="card">
+                      <div class="card-body p-2">
+                        <div>
+                          <label>กำหนดส่ง: </label>
+                          <span>31/12/2561</span>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-md-12">
+                    <div class="card">
+                      <div class="card-header">
+                        <ul class="nav nav-tabs card-header-tabs">
+                          <li class="nav-item">
+                            <a class="nav-link active" href="#" data-toggle="tab" data-target="#tabone">รายละเอียดสายพาน</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="#" data-toggle="tab" data-target="#tabtwo">รายละเอียดลูกค้า</a>
+                          </li>
+                        </ul>
+                      </div>
+                      <div class="card-body p-2">
+                        <div class="tab-content mt-2">
+                          <div class="tab-pane fade show active" id="tabone" role="tabpanel">
+                            <p> บั้ง สีดำ 40 นิ้ว x 5 ชั้น EP 120 / เกรด M (M/PI) </p>
+                            <p> หนา: 3/2 มม. หนารวม: 10 มม. / ยาว 15 เมตร, ต่อกลม, ตีตรา MUI </p>
+                          </div>
+                          <div class="tab-pane fade" id="tabtwo" role="tabpanel">
+                            <p class=""> ชื่อลูกค้า: ชลบุรี เอ็มยูไอ ไพศาล </p>
+                            <p> ประเภทลูกค้า: ลูกค้าพิเศษ </p>
                           </div>
                         </div>
                       </div>
@@ -269,13 +278,8 @@
                 </div>
                 <div class="card p-2">
                   <div class="row">
-                    <div class="col-md-6">
-                      <p class="lead">นำออก Compound </p>
-                    </div>
-                    <div class="col-md-6 text-right">
-                      <div class="p-2 form-group">
-                        <a href="#" class="btn btn-outline-primary btn-lg btn-block"> แสกนบาร์โค้ดเบิกจ่าย</a>
-                      </div>
+                    <div class="col-md-12">
+                      <p class="lead">นำออก Non Compound </p>
                     </div>
                   </div>
                   <div class="row">
