--- a/pages/sample-pages_tor/4_Stock_Compound_NonCompound.html
+++ b/pages/sample-pages_tor/4_Stock_Compound_NonCompound.html
@@ -118,10 +118,22 @@
                   <a class="nav-link" href="4_Stock_Compound_NonCompound.html">คลังสินค้า</a>
                 </li>
                 <li>
-                  <a class="nav-link" href="4_In_Out_Compound.html">นำเข้า นำออกยาง Compound</a>
+                  <a class="nav-link" href="4_In_Stock.html">นำเข้าคลังสินค้า</a>
                 </li>
                 <li>
-                  <a class="nav-link" href="4_In_Out_Non_Compound.html">นำเข้า นำออกยาง Non Compound</a>
+                  <a class="nav-link" href="4_Out_Stock.html">นำออกคลังสินค้า</a>
+                </li>
+                <li>
+                  <a class="nav-link" href="4_In_Compound.html">นำเข้า Compound</a>
+                </li>
+                <li>
+                  <a class="nav-link" href="4_Out_Compound.html">นำออก Compound</a>
+                </li>
+                <li>
+                  <a class="nav-link" href="4_In_NonCompound.html">นำเข้า Non Compound</a>
+                </li>
+                <li>
+                  <a class="nav-link" href="4_Out_NonCompound.html">นำออก Non Compound</a>
                 </li>
                 <div class="ps-scrollbar-x-rail" style="left: 0px; bottom: 3px;">
                   <div class="ps-scrollbar-x" tabindex="0" style="left: 0px; width: 0px;"></div>
@@ -334,7 +346,8 @@
                             <p class="lead">สำเร็จ</p>
                           </div>
                           <div class="col-md-6 text-right">
-                            <a href="#" class="btn btn-outline-primary pull-right">+เพิ่มรายการ</a>
+                            <a href="#" class="btn btn-outline-primary pull-right">นำออก</a>
+                            <a href="#" class="btn btn-outline-primary pull-right">นำเข้า</a>
                           </div>
                         </div>
                         <div class="row">
@@ -425,126 +438,6 @@
                                 </tr>
                               </tbody>
                             </table>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="card p-2">
-                        <div class="row">
-                          <div class="col-md-6">
-                            <h5>นำเข้า
-                              <br> </h5>
-                          </div>
-                          <div class="col-md-6 text-right">
-                            <div class="p-2 form-group">
-                              <a href="#" class="btn btn-outline-primary btn-block btn-lg"> แสกนบาร์โค้ดนำเข้า</a>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="row">
-                          <div class="col-md-6">
-                            <div class="p-2 ">
-                              <label for="inputGrade" class="col-form-label">ประเภทที่นำเข้า</label>
-                              <div class="dropdown">
-                                <select id="country" required="" class="form-control">
-                                  <option value="">เลือกสูตรยาง</option>
-                                </select>
-                                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                  <a class="dropdown-item" href="#">P</a>
-                                  <a class="dropdown-item" href="#">N</a>
-                                  <a class="dropdown-item" href="#">M</a>
-                                  <a class="dropdown-item" href="#">OR-1</a>
-                                  <a class="dropdown-item" href="#">OR-2</a>
-                                  <a class="dropdown-item" href="#">HR-100</a>
-                                  <a class="dropdown-item" href="#">HR-120</a>
-                                  <a class="dropdown-item" href="#">HR-150</a>
-                                  <a class="dropdown-item" href="#">ทดกรด/ต่าง</a>
-                                  <a class="dropdown-item" href="#">ยิงทราย</a>
-                                </div>
-                              </div>
-                            </div>
-                            <div class="p-2 ">
-                              <label for="inputBeltWidth" class="col-form-label">ความยาว</label>
-                              <input type="text" class="form-control" id="inputBeltWidth" placeholder="ระบุเลขที่"> </div>
-                          </div>
-                          <div class="col-md-6">
-                            <div class="p-2 ">
-                              <label for="inputGrade" class="col-form-label">&nbsp;</label>
-                              <div class="dropdown">
-                                <a href="#" class="btn btn-outline-primary pull-right btn-block">บันทึก</a>
-                                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                  <a class="dropdown-item" href="#">P</a>
-                                  <a class="dropdown-item" href="#">N</a>
-                                  <a class="dropdown-item" href="#">M</a>
-                                  <a class="dropdown-item" href="#">OR-1</a>
-                                  <a class="dropdown-item" href="#">OR-2</a>
-                                  <a class="dropdown-item" href="#">HR-100</a>
-                                  <a class="dropdown-item" href="#">HR-120</a>
-                                  <a class="dropdown-item" href="#">HR-150</a>
-                                  <a class="dropdown-item" href="#">ทดกรด/ต่าง</a>
-                                  <a class="dropdown-item" href="#">ยิงทราย</a>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="card p-2">
-                        <div class="row">
-                          <div class="col-md-6">
-                            <h5>นำออก &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;
-                              <br> </h5>
-                          </div>
-                          <div class="col-md-6 text-right">
-                            <div class="p-2 form-group">
-                              <a href="#" class="btn btn-outline-primary btn-block btn-lg"> แสกนบาร์โค้ดนำเข้า</a>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="row">
-                          <div class="col-md-6">
-                            <div class="p-2 ">
-                              <label for="inputGrade" class="col-form-label">ประเภทที่นำเข้า</label>
-                              <div class="dropdown">
-                                <select id="country" required="" class="form-control">
-                                  <option value="">เลือกสูตรยาง</option>
-                                </select>
-                                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                  <a class="dropdown-item" href="#">P</a>
-                                  <a class="dropdown-item" href="#">N</a>
-                                  <a class="dropdown-item" href="#">M</a>
-                                  <a class="dropdown-item" href="#">OR-1</a>
-                                  <a class="dropdown-item" href="#">OR-2</a>
-                                  <a class="dropdown-item" href="#">HR-100</a>
-                                  <a class="dropdown-item" href="#">HR-120</a>
-                                  <a class="dropdown-item" href="#">HR-150</a>
-                                  <a class="dropdown-item" href="#">ทดกรด/ต่าง</a>
-                                  <a class="dropdown-item" href="#">ยิงทราย</a>
-                                </div>
-                              </div>
-                            </div>
-                            <div class="p-2 ">
-                              <label for="inputBeltWidth" class="col-form-label">ความยาว</label>
-                              <input type="text" class="form-control" id="inputBeltWidth" placeholder="ระบุเลขที่"> </div>
-                          </div>
-                          <div class="col-md-6">
-                            <div class="p-2 ">
-                              <label for="inputGrade" class="col-form-label">&nbsp;</label>
-                              <div class="dropdown">
-                                <a href="#" class="btn btn-outline-primary pull-right btn-block">บันทึก</a>
-                                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                  <a class="dropdown-item" href="#">P</a>
-                                  <a class="dropdown-item" href="#">N</a>
-                                  <a class="dropdown-item" href="#">M</a>
-                                  <a class="dropdown-item" href="#">OR-1</a>
-                                  <a class="dropdown-item" href="#">OR-2</a>
-                                  <a class="dropdown-item" href="#">HR-100</a>
-                                  <a class="dropdown-item" href="#">HR-120</a>
-                                  <a class="dropdown-item" href="#">HR-150</a>
-                                  <a class="dropdown-item" href="#">ทดกรด/ต่าง</a>
-                                  <a class="dropdown-item" href="#">ยิงทราย</a>
-                                </div>
-                              </div>
-                            </div>
                           </div>
                         </div>
                       </div>
